# ecommerce-rs

./: Cargo.toml  README.md
src/: main.rs
src/services/: handlers.rs  mod.rs  models.rs
src/util/: db.rs  mod.rs  routes.rs
