[package]
name = "ecommerce-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
sea-orm = { version = "1.1.7", features = ["sqlx-sqlite", "runtime-tokio"] }
sea-orm-migration = "1.1.7"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = "0.6.2"
